padding given to wrapper, list styling removed

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -20,4 +20,10 @@ h1, h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 26px;
+}
+
+ul, li {
+  list-style: none;
+  padding-inline-start: 0px;
 }
