--- a/src/components/ShoppingList/styles.module.css
+++ b/src/components/ShoppingList/styles.module.css
@@ -28,6 +28,10 @@
     font-weight: 700;
 }
 
+.newItem input:focus {
+    color: var(--font_grey);
+}
+
 .newItem button[type=submit] {
     font-size: 20px;
     padding: 0;
