--- a/src/components/ShoppingList/styles.module.css
+++ b/src/components/ShoppingList/styles.module.css
@@ -26,6 +26,8 @@
     border-bottom: 2px solid var(--main_green);
     font-size: 12px;
     font-weight: 700;
+    flex-grow: 1;
+    margin-right: 20px;
 }
 
 .newItem input:focus {
