Element Styling - items and new item form (#15)
* padding given to wrapper, list styling removed

* list items given colour as a variable

* listItem styling

Currently the delete icon is still visible, which isn't how the final item will look by default. More functionality will need to be completed for this change

* newItem form styled

inactive form styled - still need to sort out when element is active/focus.

Included a plus icon as the submit button so submission is clear to all users.

Concerned that I've repeated css code for form and for item - how can this be made more efficient?

* NewItem input focus updated

Font colour was updated to appear the same when typing.

Also altered margin of list ul

* cursor pointer for add item submit button

* flex grow added to form

also included a margin for spacing

Co-authored-by: LAPTOP-R2LRJ8HV\josep <joseph@dhproductions.co.uk>

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -12,6 +12,12 @@ code {
     monospace;
 }
 
+:root {
+  --item_grey: #F8F8F8;
+  --font_grey: #5B5B5B;
+  --main_green: #8AB661;
+}
+
 h1, h2 {
   text-align: center;
 }
@@ -20,4 +26,10 @@ h1, h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 26px;
+}
+
+ul, li {
+  list-style: none;
+  padding-inline-start: 0px;
 }
