create reusable row component to minimise style duplication

--- a/src/components/ShoppingList/styles.module.css
+++ b/src/components/ShoppingList/styles.module.css
@@ -2,19 +2,6 @@
     width: 100%;
 }
 
-.newItem {
-    background-color: var(--item_grey);
-    color: var(--font_grey);
-    height: 40px;
-    border-radius: 20px;
-    margin-top: 10px;
-    box-sizing: border-box;
-    padding: 0 10px 0 28px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .newItem input,
 .newItem button[type=submit] {
     background-color: transparent;
@@ -34,9 +21,7 @@
     color: var(--font_grey);
 }
 
-.newItem button[type=submit] {
+.newItemIcon {
     font-size: 20px;
-    padding: 0;
     color: var(--main_green);
-    cursor: pointer;
 }
