--- a/src/components/ListItems/styles.module.css
+++ b/src/components/ListItems/styles.module.css
@@ -20,12 +20,13 @@
   border: 0;
   font-size: 12px;
   font-weight: 700;
+  flex-grow: 1;
+  cursor: pointer;
 }
 
 .listItem input:focus {
   outline: 0;
   border-bottom: 2px solid var(--main_green);
-  flex-grow: 1;
   margin-right: 20px;
 }
 
