added "isCompleted" state which changes styling based on true or false
if isCompleted = true, the check mark changes colour and the item text gets a line through.

In the designs the item moves to a new element , but not sure how to achieve this right now.

Testing is still needed.

--- a/src/components/ListItems/styles.module.css
+++ b/src/components/ListItems/styles.module.css
@@ -9,7 +9,7 @@
   border-radius: 20px;
   margin-top: 10px;
   box-sizing: border-box;
-  padding: 0 14px 0 28px;
+  padding: 0 10px 0 28px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -33,4 +33,23 @@
 .deleteIcon {
   cursor: pointer;
   font-size: 15px;
+  margin-right: 20px;
+}
+
+.completeIcon,
+.completedIcon {
+  cursor: pointer;
+  font-size: 20px;
+  padding: 0;
+  outline: none;
+  color: var(--check_grey);
+}
+
+.completeIcon:hover {
+  color: var(--check_yellow);
+  opacity: 0.5;
+}
+
+.completedIcon {
+  color: var(--check_yellow);
 }
