--- a/src/style/index.css
+++ b/src/style/index.css
@@ -28,6 +28,16 @@ code {
   margin-top: -30px;
 }
 
+#listSelector {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #FFFFFF;
+  box-sizing: border-box;
+  padding: 8px 26px;
+  box-shadow: 0px -5px 10px #0000000A;
+}
+
 ul, li {
   list-style: none;
   padding-inline-start: 0px;
