--- a/src/style/index.css
+++ b/src/style/index.css
@@ -25,7 +25,7 @@ code {
   padding: 16px 26px 0;
   background-color: #FFFFFF;
   border-radius: 33px;
-  margin-top: -30px;
+  margin: -30px auto 65px auto;
 }
 
 #listSelector {
