item text is now editable input (#30)
* item text is now editable input

* tests amended to accommodate text change to input field

* fix lint

I think..

* moved flex grow so user can click on whole element

* delete debug.log file

* PR comment updates

clearer variable name, non mutation

* attempted a test...

* updates but still not working

* tests working

* lint fixes

Co-authored-by: LAPTOP-R2LRJ8HV\josep <joseph@dhproductions.co.uk>

--- a/src/components/ListItems/styles.module.css
+++ b/src/components/ListItems/styles.module.css
@@ -13,8 +13,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.listItem input {
+  background-color: transparent;
+  border: 0;
   font-size: 12px;
   font-weight: 700;
+  flex-grow: 1;
+}
+
+.listItem input:focus {
+  outline: 0;
+  border-bottom: 2px solid var(--main_green);
+  margin-right: 20px;
 }
 
 .deleteIcon {
