--- a/src/components/ShoppingList/styles.module.css
+++ b/src/components/ShoppingList/styles.module.css
@@ -1,3 +1,13 @@
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 26px 0;
+    background-color: #FFFFFF;
+    border-radius: 33px;
+    margin-top: -30px;
+}
+
 .listElements {
     width: 100%;
 }
