--- a/src/components/ShoppingList/styles.module.css
+++ b/src/components/ShoppingList/styles.module.css
@@ -5,7 +5,7 @@
     padding: 16px 26px 0;
     background-color: #FFFFFF;
     border-radius: 33px;
-    margin-top: -30px;
+    margin: -30px auto 65px auto;
 }
 
 .listElements {
