"hide" list selector scroll bar on desktop
Could argue this isn't good for usability, but the scroll bar looks awful on desktop, and 9 times out of 10 it will be completely unnessecary as users won't have that many lists.

Scrolling is still there, just the scroll bar can't be seen

--- a/src/components/ListSelector/styles.module.css
+++ b/src/components/ListSelector/styles.module.css
@@ -23,6 +23,12 @@
     align-items: center;
     margin: 0;
     overflow-x: scroll;
+    border-radius: 20px;
+}
+
+.listSelector ul::-webkit-scrollbar {
+    height: 0px;
+    background: transparent;
 }
 
 .listSelector li {
