--- a/src/components/ListSelector/styles.module.css
+++ b/src/components/ListSelector/styles.module.css
@@ -47,6 +47,13 @@
     opacity: 1;
 }
 
+.selectorWrapper button[type=submit] {
+    background-color: transparent;
+    outline: none;
+    border: none;
+    padding: 0;
+}
+
 .addListIcon {
     font-size: 20px;
     padding: 0 0 0 10px;
