font size adjustments

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -14,7 +14,7 @@ code {
 
 :root {
   --item_grey: #F8F8F8;
-  --font_grey: #5B5B5B;
+  --font_grey: #888888;
   --main_green: #8AB661;
   --check_grey: #979797;
   --check_yellow: #FABE0E;
