--- a/src/components/ListSelector/styles.module.css
+++ b/src/components/ListSelector/styles.module.css
@@ -14,7 +14,7 @@
     align-items: center;
     background-color: var(--item_grey);
     box-sizing: border-box;
-    padding: 7px;
+    padding: 5px 10px 5px 5px;
     border-radius: 30px;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .listSelector li {
-    padding: 7px 26px;
+    padding: 6px 26px;
     border-radius: 20px;
     background-color: var(--main_green);
     color: #FFFFFF;
