--- a/src/components/ShoppingList/styles.module.css
+++ b/src/components/ShoppingList/styles.module.css
@@ -5,7 +5,7 @@
     padding: 16px 26px 0;
     background-color: #FFFFFF;
     border-radius: 33px;
-    margin: -30px auto 80px auto;
+    margin: -30px auto 74px auto;
 }
 
 .listElements {
@@ -15,8 +15,8 @@
 .newItem {
     background-color: var(--item_grey);
     color: var(--font_grey);
-    height: 50px;
-    border-radius: 25px;
+    height: 44px;
+    border-radius: 22px;
     margin-top: 10px;
     box-sizing: border-box;
     padding: 0 10px 0 28px;
@@ -33,6 +33,9 @@
 }
 
 .newItem input {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
     border-bottom: 2px solid var(--main_green);
     font-size: 16px;
     font-weight: 600;
