--- a/src/components/ListItems/styles.module.css
+++ b/src/components/ListItems/styles.module.css
@@ -1,3 +1,11 @@
 .list {
   margin: 0;
 }
+
+.completedHeading {
+  color: var(--check_yellow);
+  font-weight: 600;
+  margin-bottom: 0;
+  display: flex;
+  font-size: 17px;
+}
