--- a/src/components/ShoppingList/styles.module.css
+++ b/src/components/ShoppingList/styles.module.css
@@ -36,12 +36,13 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    border-bottom: 2px solid var(--main_green);
+    border-bottom: 2px solid var(--font_grey);
     font-size: 16px;
     font-weight: 600;
     flex-grow: 1;
     margin-right: 20px;
     border-radius: 0;
+    opacity: 0.6;
 }
 
 .newItem input:focus {
