--- a/src/components/ListSelector/styles.module.css
+++ b/src/components/ListSelector/styles.module.css
@@ -4,7 +4,7 @@
     width: 100%;
     background-color: #FFFFFF;
     box-sizing: border-box;
-    padding: 10px 26px;
+    padding: 15px 26px;
     box-shadow: 0px -5px 10px #0000000A;
 }
 
@@ -14,7 +14,7 @@
     align-items: center;
     background-color: var(--item_grey);
     box-sizing: border-box;
-    padding: 5px 10px 5px 5px;
+    padding: 10px;
     border-radius: 30px;
 }
 
