--- a/src/components/ListItems/styles.module.css
+++ b/src/components/ListItems/styles.module.css
@@ -2,10 +2,27 @@
   margin: 0;
 }
 
-.completedHeading {
-  color: var(--check_yellow);
-  font-weight: 600;
-  margin-bottom: 0;
+.completedWrapper {
   display: flex;
+  align-items: center;
+  margin: 20px 28px;
+  box-sizing: border-box;
+}
+
+.completedHeading {
+  color: var(--font_grey);
+  font-weight: 600;
+  margin: 0;
   font-size: 17px;
+  padding: 5px 28px 8px;
+  border-radius: 22px;
+  background-color: var(--item_grey);
+}
+
+.completedIcon {
+  font-size: 24px;
+  padding: 0;
+  margin-right: 10px;
+  outline: none;
+  color: var(--check_yellow);
 }
