--- a/src/components/ListItems/styles.module.css
+++ b/src/components/ListItems/styles.module.css
@@ -5,7 +5,7 @@
 .completedWrapper {
   display: flex;
   align-items: center;
-  margin: 20px 28px;
+  margin: 20px 0;
   box-sizing: border-box;
 }
 
@@ -14,7 +14,7 @@
   font-weight: 600;
   margin: 0;
   font-size: 17px;
-  padding: 5px 28px 8px;
+  padding: 8px 28px;
   border-radius: 22px;
   background-color: var(--item_grey);
 }
