--- a/src/components/ListItem/styles.module.css
+++ b/src/components/ListItem/styles.module.css
@@ -1,8 +1,7 @@
 .listItem {
   background-color: var(--item_grey);
-  color: var(--font_grey);
-  height: 40px;
-  border-radius: 20px;
+  height: 44px;
+  border-radius: 22px;
   margin-top: 10px;
   box-sizing: border-box;
   padding: 0 10px 0 28px;
@@ -12,12 +11,16 @@
 }
 
 .listItem input {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   background-color: transparent;
   border: 0;
-  font-size: 12px;
-  font-weight: 700;
+  font-size: 16px;
+  font-weight: 600;
   flex-grow: 1;
   cursor: pointer;
+  color: var(--font_grey);
 }
 
 .listItem input:focus {
@@ -30,6 +33,7 @@
   cursor: pointer;
   font-size: 15px;
   margin-right: 20px;
+  color: var(--font_grey);
 }
 
 .completeIcon,
