--- a/src/components/ShoppingList/styles.module.css
+++ b/src/components/ShoppingList/styles.module.css
@@ -5,7 +5,7 @@
     padding: 16px 26px 0;
     background-color: #FFFFFF;
     border-radius: 33px;
-    margin: -30px auto 65px auto;
+    margin: -30px auto 94px auto;
 }
 
 .listElements {
@@ -15,8 +15,8 @@
 .newItem {
     background-color: var(--item_grey);
     color: var(--font_grey);
-    height: 40px;
-    border-radius: 20px;
+    height: 44px;
+    border-radius: 22px;
     margin-top: 10px;
     box-sizing: border-box;
     padding: 0 10px 0 28px;
@@ -33,12 +33,16 @@
 }
 
 .newItem input {
-    border-bottom: 2px solid var(--main_green);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    border-bottom: 2px solid var(--font_grey);
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 600;
     flex-grow: 1;
     margin-right: 20px;
     border-radius: 0;
+    opacity: 0.4;
 }
 
 .newItem input:focus {
