pencil icon now reveals list details
Share icon is now for sharing only, but if web share api isn't available the copy doesn't currently work - nothing to copy!

--- a/src/components/ListHeader/styles.module.css
+++ b/src/components/ListHeader/styles.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  transition: all 1s;
 }
 
 .headerRow,
@@ -61,6 +62,14 @@
 
 .subheadingRow {
   justify-content: center;
+}
+
+.displayListDetails {
+  display: block;
+}
+
+.hideListDetails {
+  display: none;
 }
 
 .copyList,
