make share function more "react" like

--- a/src/components/ListHeader/styles.module.css
+++ b/src/components/ListHeader/styles.module.css
@@ -65,11 +65,12 @@
 }
 
 .displayListDetails {
-  display: block;
+  height: 100%;
 }
 
 .hideListDetails {
-  display: none;
+  height: 0;
+  opacity: 0;
 }
 
 .copyList,
