modernising js copy to clipboard

--- a/src/components/ListHeader/styles.module.css
+++ b/src/components/ListHeader/styles.module.css
@@ -64,13 +64,14 @@
   justify-content: center;
 }
 
-.displayListDetails {
+/* .displayListDetails {
   height: 100%;
-}
+} */
 
 .hideListDetails {
-  height: 0;
-  opacity: 0;
+  /* height: 0;
+  opacity: 0; */
+  display: none;
 }
 
 .copyList,
