Share list initialisation (#66)
* font size adjustments

* padding adjustments

* updates to "completed" styling

I couldn't find a scenario with the use of a line separator that I liked, the heading is better.

* made new item form text more generic

* test fixes

* attempting an "isEditable" state to toggle different views

Getting some weird behaviours when item should lose focus.

* remove unnecessary style code

* test fix

* lint fixes

* new edit mode method (thanks sam!)

I found that the delay needed to be a certain length for this to work. All functions fine but not sure if there are ways of minimising the time

* fixed test

This feels like a bit of a cheat. The test isn't able to find the delete button in the current version, but if the element exists even with the class display none, it can be found

* web share or copy to clipboard if statement

far from being react appropriate, but is a start

* Styling the list details/share/delete header

I got carried away...

* share icon cursor pointer

* share icon toggles visibility of list details

* removed fixed height, changed copy to share?

* pencil icon now reveals list details

Share icon is now for sharing only, but if web share api isn't available the copy doesn't currently work - nothing to copy!

* make share function more "react" like

* test fixing

This test seemed to fail randomly...

* modernising js copy to clipboard

* Revert to main version

Test failed for some reason

Co-authored-by: LAPTOP-R2LRJ8HV\josep <joseph@dhproductions.co.uk>

--- a/src/components/ListHeader/styles.module.css
+++ b/src/components/ListHeader/styles.module.css
@@ -1,32 +1,133 @@
 .listHeader {
-    background-color: var(--main_green);
-    box-sizing: border-box;
-    padding: 26px 26px 60px 26px;
-    height: 165px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  background-color: var(--main_green);
+  box-sizing: border-box;
+  padding: 26px 26px 60px 26px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: all 1s;
 }
 
-.headerRow {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.headerRow,
+.subheadingRow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
 }
 
 .headerRow h3,
-.headerRow h4 {
-    margin: 0;
-    color: #FFFFFF;
-    opacity: 0.7;
-    font-weight: 600;
+.headerRow h4,
+.subheadingRow h4 {
+  margin: 0;
+  color: #FFFFFF;
+  opacity: 0.7;
+  font-weight: 600;
+}
+
+.headerRow h3 {
+  display: flex;
+  align-items: center;
 }
 
 .logo {
-    height: 20px;
+  height: 20px;
 }
 
 .shareIcon {
-    font-size: 20px;
-    color: #FFFFFF;
+  font-size: 20px;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.pencilIcon {
+  margin-left: 15px;
+  font-size: 16px;
+  outline: none;
+  border: 0;
+  cursor: pointer;
+}
+
+.shareIcon:focus,
+.pencilIcon:focus {
+  outline: none;
+  border: 0;
+}
+
+.clockIcon,
+.deleteListIcon {
+  margin-right: 10px;
+}
+
+.subheadingRow {
+  justify-content: center;
+}
+
+/* .displayListDetails {
+  height: 100%;
+} */
+
+.hideListDetails {
+  /* height: 0;
+  opacity: 0; */
+  display: none;
+}
+
+.copyList,
+.deleteList {
+  background-color: var(--share_background);
+  height: 44px;
+  border-radius: 22px;
+  margin-top: 10px;
+  box-sizing: border-box;
+  padding: 0 14px 0 28px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+
+.copyList h5 {
+  font-size: 16px;
+  color: var(--font_grey);
+  opacity: 0.5;
+  margin-right: 5px;
+}
+
+.copyList input {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  background-color: transparent;
+  border: 0;
+  font-size: 16px;
+  font-weight: 600;
+  flex-grow: 1;
+  cursor: pointer;
+  color: var(--font_grey);
+  padding: 10px 0;
+}
+
+.copyList input:focus {
+  outline: 0;
+  border: none;
+  padding: 0;
+}
+
+.copyIcon {
+  color: var(--check_grey);
+}
+
+@media (max-width: 360px) {
+  .copyList h5 {
+    display: none;
+  }
+}
+
+.deleteList {
+  background-color: var(--delete_red);
+  color: #FFFFFF;
+  font-weight: 600;
+  justify-content: center;
 }
