react notifications added to project
A notification appears when the user copies the share link to the clipboard

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -31,3 +31,8 @@ ul, li {
   list-style: none;
   padding-inline-start: 0px;
 }
+
+.notification-success {
+  background-color: var(--check_yellow);
+  border-radius: 5px;
+}
